# linup

./: .gitignore  .vercelignore  LINUP Env Vars.txt  index.html  linup-profile-clean.ps1  linup-profile.ps1  linup-updater.key  linup-updater.key.pub  package.json  pnpm-lock.yaml  prompt-F-061.txt
.github/workflows/: dev-build.yml
prompts/: F-061.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_core_tables.sql  002_budget_columns.sql  003_artifacts.sql  004_idea_intake.sql  004_stop_events.sql  005_clarify_sessions.sql  005_implementation_batches.sql  006_test_runs.sql  007_builds.sql  008_deployments.sql  009_exports.sql  010_audit_trail.sql  011_update_history.sql  012_mec.sql  013_secrets_wizard.sql  014_maintenance.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: artifacts.rs  budget.rs  maintenance.rs  mec.rs  mod.rs  preview.rs  project.rs  secrets.rs  secrets_wizard.rs  stage.rs  stop_condition.rs  system.rs  updater.rs
src-tauri/src/commands/pipeline/: mod.rs  stage10_build.rs  stage11_deployment.rs  stage12_export.rs  stage13_release_notes.rs  stage1_idea_intake.rs  stage2_clarify.rs  stage4_product_spec.rs  stage5_architecture.rs  stage6_scaffold.rs  stage7_implementation.rs  stage8_hardening.rs  stage9_tests.rs
src/components/: BudgetBar.tsx  ConnectivityProvider.tsx  DiffViewer.tsx  EvidencePackViewer.tsx  OfflineBanner.tsx  PreviewButton.tsx  StageStatusHeader.tsx  TopBar.tsx
src/constants/: logos.ts
src/context/: AuthContext.tsx
src/lib/: supabase.ts
src/screens/: AuthScreen.tsx  (+7 more)
(+11 files in other folders)
