[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
whoami = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
